# locrideambiente

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  settings_dist.py
