[tool.poetry]
name = "differenziata"
version = "0.1.0"
description = ""
authors = ["Massimiliano Montaleone <massimilianomontaleone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
holidays = "^0.46"
requests = "^2.31.0"
schedule = "^1.2.1"
pid = "^3.0.4"
python-telegram-bot = "^13.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
